fix actions overflowing and add angular codemirror directive

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -1467,6 +1467,7 @@ input[type=file] {
 
 .stealthInput input {
     position: relative;
+    width: 160px;
     border: none;
     padding: 2px;
     padding-right: 14px;
